[TEX] Fill checklist [no ci]

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -28,7 +28,7 @@
   Empirically, we find that our KFAC-based optimizers are competitive with expensive second-order methods on small problems, scale more favorably to higher-dimensional neural networks and PDEs, and consistently outperform first-order methods.
 \end{abstract}
 
-\section{Introduction}
+\section{Introduction}\label{sec:introduction}
 \input{sections/introduction.tex}
 
 \section{Background}\label{sec:background}
