--- a/paper/sections/checklist.tex
+++ b/paper/sections/checklist.tex
@@ -1,41 +1,12 @@
 \newpage
-\todo[inline]{delete explanations before submission}
 
 \section*{NeurIPS Paper Checklist}
 
-%%% BEGIN INSTRUCTIONS %%%
-The checklist is designed to encourage best practices for responsible machine learning research, addressing issues of reproducibility, transparency, research ethics, and societal impact. Do not remove the checklist: {\bf The papers not including the checklist will be desk rejected.} The checklist should follow the references and follow the (optional) supplemental material.  The checklist does NOT count towards the page
-limit.
-
-Please read the checklist guidelines carefully for information on how to answer these questions. For each question in the checklist:
-\begin{itemize}
-\item You should answer \answerYes{}, \answerNo{}, or \answerNA{}.
-\item \answerNA{} means either that the question is Not Applicable for that particular paper or the relevant information is Not Available.
-\item Please provide a short (1–2 sentence) justification right after your answer (even for NA).
-  % \item {\bf The papers not including the checklist will be desk rejected.}
-\end{itemize}
-
-{\bf The checklist answers are an integral part of your paper submission.} They are visible to the reviewers, area chairs, senior area chairs, and ethics reviewers. You will be asked to also include it (after eventual revisions) with the final version of your paper, and its final version will be published with the paper.
-
-The reviewers of your paper will be asked to use the checklist as one of the factors in their evaluation. While "\answerYes{}" is generally preferable to "\answerNo{}", it is perfectly acceptable to answer "\answerNo{}" provided a proper justification is given (e.g., "error bars are not reported because it would be too computationally expensive" or "we were unable to find the license for the dataset we used"). In general, answering "\answerNo{}" or "\answerNA{}" is not grounds for rejection. While the questions are phrased in a binary way, we acknowledge that the true answer is often more nuanced, so please just use your best judgment and write a justification to elaborate. All supporting evidence can appear either in the main paper or the supplemental material, provided in appendix. If you answer \answerYes{} to a question, in the justification please point to the section(s) where related material for the question can be found.
-
-IMPORTANT, please:
-\begin{itemize}
-\item {\bf Delete this instruction block, but keep the section heading ``NeurIPS paper checklist"},
-\item  {\bf Keep the checklist subsection headings, questions/answers and guidelines below.}
-\item {\bf Do not modify the questions and only use the provided macros for your answers}.
-\end{itemize}
-
-
-%%% END INSTRUCTIONS %%%
-
-
 \begin{enumerate}
-
 \item {\bf Claims}
 \item[] Question: Do the main claims made in the abstract and introduction accurately reflect the paper's contributions and scope?
-\item[] Answer: \answerYes{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: We tried our best to do so. 
+\item[] Answer: \answerYes{}
+\item[] Justification: We list our contributions as bullet points in \Cref{sec:introduction} and provide references to the parts of the paper that present them.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the abstract and introduction do not include the claims made in the paper.
@@ -46,7 +17,7 @@ IMPORTANT, please:
 
 \item {\bf Limitations}
 \item[] Question: Does the paper discuss the limitations of the work performed by the authors?
-\item[] Answer: \answerYes{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
+\item[] Answer: \answerYes{}
 \item[] Justification: See the paragraph dedicated to limitations in \Cref{sec:conclusion}.
 \item[] Guidelines:
   \begin{itemize}
@@ -62,9 +33,8 @@ IMPORTANT, please:
 
 \item {\bf Theory Assumptions and Proofs}
 \item[] Question: For each theoretical result, does the paper provide the full set of assumptions and a complete (and correct) proof?
-\item[] Answer: \answerNA{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: %\justificationTODO{}
-  Whereas we provide a derivation of the proposed Kronecker-factored approximation, our work does not provide any rigorous mathematical statements.
+\item[] Answer: \answerNA{}
+\item[] Justification: Whereas we provide a derivation of the proposed Kronecker-factored approximation, our work does not provide any rigorous mathematical statements.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not include theoretical results.
@@ -77,8 +47,8 @@ IMPORTANT, please:
 
 \item {\bf Experimental Result Reproducibility}
 \item[] Question: Does the paper fully disclose all the information needed to reproduce the main experimental results of the paper to the extent that it affects the main claims and/or conclusions of the paper (regardless of whether the code and data are provided or not)?
-\item[] Answer: \answerTODO{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerYes{}
+\item[] Justification: We provide a detailed description of the general experimental protocol in \Cref{sec:tuning-protocol} and details for each individual experiment in~\Cref{sec:experimental_details}, including all hyper-parameter search spaces and hyper-parameters of the best runs. We also show pseudo-code for our algorithm in \Cref{app:pseudo}.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not include experiments.
@@ -97,8 +67,8 @@ IMPORTANT, please:
 
 \item {\bf Open access to data and code}
 \item[] Question: Does the paper provide open access to the data and code, with sufficient instructions to faithfully reproduce the main experimental results, as described in supplemental material?
-\item[] Answer: \answerTODO{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerYes{}
+\item[] Justification: We will open-source our KFAC implementations, as well as the code to fully reproduce all experiments and the original data presented in this manuscript.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that paper does not include experiments requiring code.
@@ -114,9 +84,8 @@ IMPORTANT, please:
 
 \item {\bf Experimental Setting/Details}
 \item[] Question: Does the paper specify all the training and test details (e.g., data splits, hyperparameters, how they were chosen, type of optimizer, etc.) necessary to understand the results?
-\item[] Answer: \answerYes{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
-  In \Cref{sec:experiments} and \Cref{sec:experimental_details} we list....
+\item[] Answer: \answerYes{}
+\item[] Justification: We list all details in \Cref{sec:experimental_details}.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not include experiments.
@@ -126,8 +95,8 @@ IMPORTANT, please:
 
 \item {\bf Experiment Statistical Significance}
 \item[] Question: Does the paper report error bars suitably and correctly defined or other appropriate information about the statistical significance of the experiments?
-\item[] Answer: \answerNo{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerYes{}
+\item[] Justification: While we do not show mean and standard deviations over different model initializations for training curves, we aimed to use a thorough tuning protocol to avoid artifacts from insufficient hyper-parameter tuning and also conducted experiments with alternative hyper-parameter search methods (Bayesian versus random/grid) to ensure the consistency of our results.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not include experiments.
@@ -143,9 +112,9 @@ IMPORTANT, please:
 
 \item {\bf Experiments Compute Resources}
 \item[] Question: For each experiment, does the paper provide sufficient information on the computer resources (type of compute workers, memory, time of execution) needed to reproduce the experiments?
-\item[] Answer: \answerYes{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
-  In \Cref{sec:experiments} we describe the cluster and GPUs used and report the wall clock computation times.
+\item[] Answer: \answerYes{}
+\item[] Justification: We describe the hardware in \Cref{sec:experiments}.
+  The total computation time can be inferred from the description of the tuning protocol in combination with the assigned time budget per run.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not include experiments.
@@ -156,8 +125,8 @@ IMPORTANT, please:
 
 \item {\bf Code Of Ethics}
 \item[] Question: Does the research conducted in the paper conform, in every respect, with the NeurIPS Code of Ethics \url{https://neurips.cc/public/EthicsGuidelines}?
-\item[] Answer: \answerYes{}   % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: We have read the Code of Ethics and concluded that our submission conforms.
+\item[] Answer: \answerYes{}
+\item[] Justification: We have read the Code of Ethics and believe that our submission conforms to it.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the authors have not reviewed the NeurIPS Code of Ethics.
@@ -168,9 +137,9 @@ IMPORTANT, please:
 
 \item {\bf Broader Impacts}
 \item[] Question: Does the paper discuss both potential positive societal impacts and negative societal impacts of the work performed?
-\item[] Answer: \answerNo{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: %\justificationTODO{}
-It is the goal of this paper to improve the accuracy of neural-network-based PDE solvers. As the numerical solution of PDEs is a classic topic in applied mathematics and engineering, we believe there is no dedicated discussion of the societal impacts. 
+\item[] Answer: \answerNo{}
+\item[] Justification:
+  It is the goal of this paper to improve the accuracy of neural network-based PDE solvers. As the numerical solution of PDEs is a classic topic in applied mathematics and engineering, we believe there is no immediate negative societal impact.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that there is no societal impact of the work performed.
@@ -183,8 +152,8 @@ It is the goal of this paper to improve the accuracy of neural-network-based PDE
 
 \item {\bf Safeguards}
 \item[] Question: Does the paper describe safeguards that have been put in place for responsible release of data or models that have a high risk for misuse (e.g., pretrained language models, image generators, or scraped datasets)?
-\item[] Answer: \answerNA{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerNA{}
+\item[] Justification: The paper does not release any data or models that have a high risk for misuse.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper poses no such risks.
@@ -195,8 +164,8 @@ It is the goal of this paper to improve the accuracy of neural-network-based PDE
 
 \item {\bf Licenses for existing assets}
 \item[] Question: Are the creators or original owners of assets (e.g., code, data, models), used in the paper, properly credited and are the license and terms of use explicitly mentioned and properly respected?
-\item[] Answer: \answerYes{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerNA{}
+\item[] Justification: The paper does not use any existing assets.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not use existing assets.
@@ -211,8 +180,8 @@ It is the goal of this paper to improve the accuracy of neural-network-based PDE
 
 \item {\bf New Assets}
 \item[] Question: Are new assets introduced in the paper well documented and is the documentation provided alongside the assets?
-\item[] Answer: \answerTODO{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerNA{}
+\item[] Justification: The paper does not release any new assets.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not release new assets.
@@ -223,8 +192,8 @@ It is the goal of this paper to improve the accuracy of neural-network-based PDE
 
 \item {\bf Crowdsourcing and Research with Human Subjects}
 \item[] Question: For crowdsourcing experiments and research with human subjects, does the paper include the full text of instructions given to participants and screenshots, if applicable, as well as details about compensation (if any)?
-\item[] Answer: \answerNA{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerNA{}
+\item[] Justification: The paper does not involve crowdsourcing nor research with human subjects.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not involve crowdsourcing nor research with human subjects.
@@ -234,8 +203,8 @@ It is the goal of this paper to improve the accuracy of neural-network-based PDE
 
 \item {\bf Institutional Review Board (IRB) Approvals or Equivalent for Research with Human Subjects}
 \item[] Question: Does the paper describe potential risks incurred by study participants, whether such risks were disclosed to the subjects, and whether Institutional Review Board (IRB) approvals (or an equivalent approval/review based on the requirements of your country or institution) were obtained?
-\item[] Answer: \answerNA{} % Replace by \answerYes{}, \answerNo{}, or \answerNA{}.
-\item[] Justification: \justificationTODO{}
+\item[] Answer: \answerNA{}
+\item[] Justification: The paper does not involve crowdsourcing nor research with human subjects.
 \item[] Guidelines:
   \begin{itemize}
   \item The answer NA means that the paper does not involve crowdsourcing nor research with human subjects.
