[TEX] Improve pseudo-code [no ci]

--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -74,6 +74,7 @@ group-minimum-digits={3}%
 % ===================================================================
 % ALGORITHMS
 % ===================================================================
+\usepackage{algorithm}
 \usepackage{algpseudocode}
 %%% Local Variables:
 %%% mode: latex
