--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -28,8 +28,10 @@
 \section{Experimental Details and Additional Results}\label{sec:experimental_details}
 \input{sections/experimental_details.tex}
 
+\clearpage
 \section{Pseudo-Code: KFAC for the Poisson Equation}\label{app:pseudo}
 \input{sections/pseudocode_poisson.tex}
+\clearpage
 
 %\section{Derivation of KFAC general PDEs}\label{app:generalPDEs}
 %\input{paper/sections/general_PDEs}
