--- a/paper/sections/kfacs.tex
+++ b/paper/sections/kfacs.tex
@@ -182,7 +182,7 @@ which gives the approximation
 \end{tcolorbox}
 
 
-This approximation can be stated for a large class of weight-sharing architectures in which case it generalizes the \emph{expand approximation} in~\citet{eschenhagen2023kroneckerfactored}.
+This approximation can be stated for a large class of weight sharing architectures in which case it generalizes the \emph{expand approximation} in~\citet{eschenhagen2023kroneckerfactored}.
 
 
 %
