--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -8,7 +8,7 @@
 We implement KFAC, KFAC*, and ENGD with either the per-layer or full Gramian in PyTorch~\citep{paszke2019pytorch}.
 As a matrix-free version of ENGD, we use the Hessian-free optimizer~\citep{martens2010deep} which uses truncated conjugate gradients (CG) with exact Gramian-vector products to pre-condition the gradient.
 We chose this because there is a fully-featured implementation from~\citet{tatzel2022late} which offers many additional heuristics like adaptive damping, CG backtracking, and backtracking line search, allowing this algorithm work well with little hyper-parameter tuning.
-As baselines, we use SGD with tuned learning rate and momentum, Adam with tuned learning rate, and L-BFGS with tuned learning rate and history size.
+As baselines, we use SGD with tuned learning rate and momentum, Adam with tuned learning rate, and LBFGS with tuned learning rate and history size.
 We tune hyper-parameters using Weights \& Biases~\citep{wandb} (see \Cref{sec:tuning-protocol} for the exact protocol).
 For random/grid search, we run an initial round of 50 runs with generous search spaces, then narrow them down and re-run for another 50 runs; for Bayesian search, we assign the same total compute to each optimizer.
 We report the runs with lowest $L_2$ error approximated on a held-out data set and using the known solution to the studied PDEs.
@@ -65,7 +65,7 @@ To prevent over-fitting, we use mini-batches and sample a new batch each iterati
 We noticed that KFAC improves significantly when batches are sampled less frequently and hypothesize that it might need more iterations to make similar progress than one iteration of Hessian-free or ENGD; consequently we sample a new batch only every 100 iterations for KFAC.
 To ensure that this does not lead to an unfair advantage for KFAC, we conduct an additional experiment for the MLP with $D=\num{116864}$ where we tune batch sizes, batch sampling frequencies, and all hyper-parameters with generous search spaces using Bayesian search (\Cref{sec:4d-heat-bayes-app}).
 We find that this does not significantly boost performance of the other methods (compare \Cref{fig:4D-heat,fig:heat4d-bayes-appendix}).
-Again, we observe that KFAC offers competitive performance compared to other second-order methods for networks with prohibitive size for ENGD and consistently outperforms SGD, Adam, and L-BFGS. We confirmed these observations with another 5d Poisson equation on the same architectures, see~\Cref{sec:poisson5d-appendix,fig:poisson5d-appendix}.
+Again, we observe that KFAC offers competitive performance compared to other second-order methods for networks with prohibitive size for ENGD and consistently outperforms SGD, Adam, and LBFGS. We confirmed these observations with another 5d Poisson equation on the same architectures, see~\Cref{sec:poisson5d-appendix,fig:poisson5d-appendix}.
 
 \begin{figure}
   \centering
@@ -99,7 +99,7 @@ using the same architectures as before, but with larger intermediate widths and 
 Due to lacking references for training such high-dimensional problems, we select all hyper-parameters via Bayesian search, including batch sizes and batch sampling frequencies (all details in \Cref{sec:high-dimensional-poissons-app}).
 We see a similar picture as before with KFAC consistently outperforming first-order methods and offering competitive performance among second-order methods.
 To account for the possibility that the Bayesian search did not converge properly to the best hyper-parameters, we conduct a random/grid search experiment for the 10d Poisson equation (\Cref{fig:10D-Poisson}, middle), using similar batch sizes and same batch sampling frequencies as for the $(4+1)$d heat equation (all details in \Cref{sec:poisson10d-appendix}).
-In this experiment, KFAC also achieved similar performance than Hessian-free and outperformed SGD, Adam, and L-BFGS (\Cref{fig:poisson_10d-appendix}).
+In this experiment, KFAC also achieved similar performance than Hessian-free and outperformed SGD, Adam, and LBFGS (\Cref{fig:poisson_10d-appendix}).
 
 %%% Local Variables:
 %%% mode: latex
