--- a/paper/sections/background_engd.tex
+++ b/paper/sections/background_engd.tex
@@ -1,10 +1,10 @@
 First-order optimizers like gradient descent and Adam struggle at producing satisfactory solutions when used to train PINNs~\citep{cuomo2022scientific}.
-Instead, function-space-inspired second-order methods have lately shown promising results~\citep{muller2024optimization}.
-We focus on \emph{energy natural gradient descent (ENGD~\cite{muller2023achieving})} which---applied to PINN objectives like \eqref{eq:pinn-loss}---corresponds to the Gauss-Newton method~\cite[Chapter 6.3][]{bottou2016machine}.
+Instead, function space-inspired second-order methods have lately shown promising results~\citep{muller2024optimization}.
+We focus on \emph{energy natural gradient descent (ENGD~\cite{muller2023achieving})} which---applied to PINN objectives like \eqref{eq:pinn-loss}---corresponds to the Gauss-Newton method~\cite[Chapter 6.3,][]{bottou2016machine}.
 ENGD mimics Newton's method up to a projection onto the model's tangent space and a discretization error that vanishes quadratically in the step size, thus providing locally optimal residual updates.
 Alternatively, the Gauss-Newton method can be motivated from the standpoint of operator-preconditioning, where the Gauss-Newton matrix leads to optimal conditioning of the problem~\citep{de2023operator}.
 
-Natural gradient methods perform parameter updates via a preconditioned gradient descent scheme $\vtheta_{t+1} = \vtheta_t - \alpha_t \mG(\vtheta_t)^+\nabla L(\vtheta_t)$, where $\mG(\vtheta)^+$ denotes the pseudo-inverse of a suitable \emph{Gramian matrix} $\mG(\vtheta) \in \sR^{P \times P}$.
+Natural gradient methods perform parameter updates via a preconditioned gradient descent scheme $\vtheta \leftarrow \vtheta - \alpha \mG(\vtheta)^+\nabla L(\vtheta)$, where $\mG(\vtheta)^+$ denotes the pseudo-inverse of a suitable \emph{Gramian matrix} $\mG(\vtheta) \in \sR^{P \times P}$ and $\alpha$ is a step size.
 ENGD for the PINN loss~\eqref{eq:pinn-loss} uses the Gramian
 \begin{align}\label{eq:gramian}
   \begin{split}
