--- a/paper/sections/background_kfac.tex
+++ b/paper/sections/background_kfac.tex
@@ -1,7 +1,7 @@
 \subsection{Kronecker-factored Approximate Curvature}\label{sec:kfac-background}
 
-We review Kronecker-factored Approximate Curvature (KFAC) which was introduced by~\citet{heskes2000natural, martens2015optimizing} in the context of maximum likelihood estimation to approximate the per-layer Fisher information matrix by a Kronecker product to speed up approximate natural gradient descent~\cite{amari1998natural}.
-The Fisher associated with the loss $\nicefrac{1}{2N} \sum_{n=1}^N \left\lVert u_\vtheta(\vx_n) - \vy_n \right\rVert_2^2$ is
+We review Kronecker-factored approximate curvature (KFAC) which was introduced by~\citet{heskes2000natural, martens2015optimizing} in the context of maximum likelihood estimation to approximate the per-layer Fisher information matrix by a Kronecker product to speed up approximate natural gradient descent~\cite{amari1998natural}.
+The Fisher associated with the loss $\nicefrac{1}{2N} \sum_{n=1}^N \left\lVert u_\vtheta(\vx_n) - y_n \right\rVert_2^2$ with targets $y_n \in \sR$ is
 \begin{equation}\label{eq:fisher-mle}
   \mF(\vtheta)
   =
