[REF] Unify spelling of Taylor-mode and manufactured solution [no ci]

--- a/paper/sections/heat_equation.tex
+++ b/paper/sections/heat_equation.tex
@@ -1,4 +1,4 @@
-Consider the $D$-dimensional%\todo{Low priority: lower case $d$ or upper case $D$? The number of trainable weights is already $D$.} 
+Consider the $D$-dimensional%\todo{Low priority: lower case $d$ or upper case $D$? The number of trainable weights is already $D$.}
 homogeneous heat equation
 \begin{align*}
   \partial_{t} u(t, \vx)
@@ -21,7 +21,7 @@ As initial conditions, we use $u_0(x) = u(0, \vx) = \prod_{d=1}^D \sin(\pi [\vx_
 For boundary conditions, we use $g(t, \vx) = 0$ for $t, \vx \in \mathrm{T} \times \partial\Omega$.
 The manufactured solution thus is
 \begin{align*}
-  u^{\star}(t, \vx)
+  u_{\star}(t, \vx)
   =
   \exp \left(-\frac{\pi^2 D t}{4} \right)
   \prod_{d=1}^D \sin(\pi [\vx_d])\,.
