--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -4,7 +4,7 @@ Our approach goes beyond the popular KFAC for traditional deep learning problems
 To establish KFAC for such losses, we use Taylor-mode automatic differentiation to describe the differential operator's computation graph as a forward network with shared weights which allows us to apply a recently-developed variant of KFAC for networks with weight sharing.
 Empirically, we find that our KFAC-based optimizers are competitive with expensive second-order methods on small problems, scale more favorably to higher-dimensional neural networks and PDEs, and consistently outperform first-order methods.
 
-\textbf{Limitations \& future directions} While our implementation currently only supports MLPs and the Poisson and heat equations, the concepts we use to derive KFAC (Taylor mode, weight sharing) apply to arbitrary architectures and PDEs, as described in~\Cref{sec:KFAC-general}.
+\textbf{Limitations \& future directions} While our implementation currently only supports MLPs and the Poisson and heat equations, the concepts we use to derive KFAC (Taylor-mode, weight sharing) apply to arbitrary architectures and PDEs, as described in~\Cref{sec:KFAC-general}.
 Further, we are excited that our current algorithms show promising performance when compared to second-order methods with sophisticated heuristics.
 In fact, the original KFAC optimizer itself~\cite{martens2015optimizing} relies heavily on such heuristics that have been hypothesized to be crucial for its performance~\cite{clarke2023adam}.
 Our algorithms borrow components, but we did not explore all bells and whistles, e.g.\,adaptive damping and heuristics to distribute damping over the Kronecker factors.
